--- a/expression.mdx
+++ b/expression.mdx
@@ -216,7 +216,8 @@ to `float | None`) or use [`coalesce`](/api-docs#coalesce) to fall back to a def
 
 ### Additional functions
 The `chalk.functions` module exposes several helpful functions that can be used in
-combination with expression references to transform features:
+combination with expression references to transform features. These functions are meant
+to be used in expressions and are not available as standalone functions.
 
 #### Logic
 
