how to test resolvers

--- a/expression.mdx
+++ b/expression.mdx
@@ -217,7 +217,8 @@ to `float | None`) or use [`coalesce`](/api-docs#coalesce) to fall back to a def
 ### Additional functions
 The `chalk.functions` module exposes several helpful functions that can be used in
 combination with expression references to transform features. These functions are meant
-to be used in expressions and are not available as standalone functions.
+to be used in expressions and are not available as standalone functions. To view all
+available functions, see our [SDK docs](/api-docs#coalesce)
 
 #### Logic
 
@@ -345,3 +346,9 @@ to be used in expressions and are not available as standalone functions.
 * [`cast`](/api-docs#cast)
 * [`jinja`](/api-docs#jinja)
 * [`sagemaker_predict`](/api-docs#sagemaker_predict)
+
+
+## Testing
+
+To test your expressions, we recommend setting up [integration tests](/docs/integration-tests) or
+iterating on a branch.
