--- a/python-resolvers.mdx
+++ b/python-resolvers.mdx
@@ -568,4 +568,8 @@ Just make sure that the return `DataFrame`s do not have duplicate rows.
 That means no two rows should have the same primary key, or primary key & timestamp combinations if the
 feature time is also returned.
 
+## Testing
+
+To test your Python resolvers, you can set up [unit tests](/docs/unit-tests), construct
+[integration tests](/docs/integration-tests) or iterate on a branch.
 
