--- a/sql-resolvers.mdx
+++ b/sql-resolvers.mdx
@@ -80,3 +80,8 @@ select id, name, age, hobbies, updated_at from users
 ```
 
 For the full list of configurations, see [here](/docs/sql#configuration).
+
+## Testing
+
+To test your SQL resolvers, we recommend setting up [integration tests](/docs/integration-tests) or
+iterating on a branch.
