--- a/aggregations.mdx
+++ b/aggregations.mdx
@@ -122,7 +122,7 @@ class User:
     count_transactions: Windowed[float] = windowed(
         "30d", "60d", "90d",
         expression=_.transactions[
-            _.at > _.chalk_window
+            _.at > _.chalk_window,
             _.at < _.chalk_now
         ].count(),
     )
