--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -1,7 +1,7 @@
 ---
 title: What is Chalk?
 metaTitle: What is Chalk?
-metaDescription: 'Chalk is a data platform for inference that enables innovative machine learning teams to focus on building the unique products and models that make their business stand out.'
+metaDescription: 'Chalk is the data platform for inference that enables innovative machine learning teams to focus on building the unique products and models that make their business stand out.'
 titleHidden: true
 hideToc: true
 published: true
