--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -34,7 +34,7 @@ Chalk solves core pain points teams face when building enterprise AI and ML syst
 
 ## How does Chalk make feature engineering easier?
 
-Chalk lets you define features using Pythonic dataclasses–just like Pydantic–no DSLs.
+Chalk lets you define features using Pythonic classes — no DSLs.
 Every feature is:
 - typed and validated
 - versioned and testable
