--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -18,7 +18,7 @@ import { PyDiffEditor } from '@/components/Editor'
 
 <DocsHero />
 
-Build, deploy, and iterate faster with Chalk--a programmable feature engine that powers low-latency inference, rapid model iteration, and observability across your model-lifecycle.
+Build, deploy, and iterate faster with Chalk — a programmable feature engine that powers low-latency inference, rapid model iteration, and observability across your model lifecycle.
 Chalk solves core pain points teams face when building enterprise AI and ML systems:
 
 - deploying and scaling production-grade infrastructure
