--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -22,7 +22,7 @@ Build, deploy, and iterate faster with Chalk — a programmable feature engine t
 Chalk solves core pain points teams face when building enterprise AI and ML systems:
 
 - deploying and scaling production-grade infrastructure
-- authoring feature pipelines in pure Python – No DSLs! No rewrites!
+- authoring feature pipelines in pure Python — No DSLs! No rewrites!
 - building training datasets with high throughput batch offline queries and point-in-time correctness
 - evaluating LLMs at scale by integrating unstructured inputs into pipelines
 - serving fresh features on-the-fly with versioning, branching, and full observability
