--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -40,7 +40,7 @@ Every feature is:
 - versioned and testable
 - composable and reusable in both training and online inference
 
-Describe relationships between entities (e.g. users and transactions) with simple type annotations and Chalk takes care of joins, lineage, and query planning automatically.
+Describe relationships between entities (e.g., users and transactions) with simple type annotations, and Chalk takes care of joins, lineage, and query planning automatically.
 
 ```py
 import chalk.functions as F
