--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -135,7 +135,7 @@ At inference time, query plans tailored to your input/output schema are generate
 
 Each node in the DAG is a Chalk expression or resolver (SQL / Python):
 
-- lambda like Chalk expression e.g. `is_expensive_purchase: bool = _.amount > 100`
+- An expression e.g. `is_expensive_purchase: bool = _.amount > 100`
 - SQL resolver that connects to an underlying data store like Athena
 - Python resolver i.e. ordinary Python functions (Pandas, httpx, or LLM calls)
 
