--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -227,7 +227,7 @@ Add a caching policy with one line of code in our feature definition:
 
 ### How do I deploy and query features with Chalk?
 
-Once we've defined our pipelines, deploy features to a branch in < 30s with:
+Once we've defined our pipelines, we can deploy features to a branch in < 1s with:
 
 ```shell
 chalk apply --branch=elvis
