--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -214,7 +214,7 @@ We wrote an [engineering blog post on our Symbolic Python interpreter](https://c
 
 ### How can I cache features in Chalk?
 
-Some data sources–like LLMs or 3rd party APIs are expensive or slow to call at inference time,  Chalk supports caching features to optimize for latency and cost:
+Some data sources, like LLMs or 3rd party APIs, are expensive or slow to call at inference time. Chalk supports caching features to optimize for latency and cost:
 
 - define cache windows inline with your features
 - override staleness at query-time when fresh data is critical
