--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -233,7 +233,7 @@ Once we've defined our pipelines, we can deploy features to a branch in < 1s wit
 chalk apply --branch=elvis
 ```
 
-We can then query for features against this branch and perform QA workflows on our preview environment to make sure that our Chalk deployment performs as expected:
+We can then query for features against this branch and perform QA workflows on our branch deployment to make sure that our pipelines perform as expected:
 
 ```shell
 chalk query --branch=elvis --in user.id=47
