--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -405,7 +405,7 @@ With Chalk, Data scientists easily integrate new data sources, prototype with gu
 
 ## Chalk for Data Engineers
 
-Manage features declaratively--with a few lines of code--all without the complexity of orchestrating ETL jobs, feature stores, and offline/online datastores.
+Manage features declaratively without the complexity of orchestrating ETL jobs, feature stores, and offline/online datastores.
 
 - cache expensive computations with configurable staleness
 - manage versioning and A/B testing of feature computation
