--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -255,7 +255,7 @@ The ability to re-use the same features in both contexts dramatically shortens d
 
 Chalk is the first platform to unify feature engineering, LLM orchestration, and real-time inference under a single abstraction: programmable features.
 
-At the core, Chalk retrieves and computes features dynamically at inference time with an execution engine called Velox.
+Chalk retrieves and computes features dynamically at inference time with an execution engine called Velox.
 We maintain a fork that’s been heavily optimized for low-latency (< 10ms).
 
 This enables teams to:
