unifying offline and online execution

--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -258,7 +258,7 @@ Chalk is the first platform to unify feature engineering, LLM orchestration, and
 Chalk retrieves and computes features dynamically at inference time with an execution engine called [Velox.](https://github.com/facebookincubator/velox)
 We maintain a fork that’s been heavily optimized for low-latency (< 10ms).
 
-This enables teams to:
+Unifying online and offline execution enables teams to:
 
 - consolidate training and serving into a single version controlled environment
 - reduce time-to-production for new models from months to days
