--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -274,7 +274,8 @@ Bridge the gap between experimentation and production with a single system that 
 
 **No DSLs, building with Chalk is building with Python**
 
-Chalk gives MLOps teams the tools to deploy enterprise-grade infrastructure with a superb developer experience. Define features in Python that are run natively in Rust, C++, or as UDFs—no need to manually port notebooks and code into other languages e.g. Scala.
+Chalk gives MLOps teams the tools to deploy enterprise-grade infrastructure with a superb developer experience.
+Define features in Python that are run natively in Rust, C++, or as UDFs — no need to manually port notebooks and code into other languages e.g. Scala.
 
 Chalk takes it a step further by democratizing modern software engineering practices for data teams:
 
