--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -289,13 +289,14 @@ With SDKs available in multiple languages, you can easily serve features across 
 
 **Observability**
 
-Chalk enables teams to monitor and trace features back to the source, reducing governance bottlenecks by providing audit-ready records of all inputs and outputs for compliance.
+Traditional ML systems often operate as opaque black boxes, especially when transformation logic gets embedded across disparate data pipelines, obscuring the connection between inputs and predictions.
+Chalk shatters this paradigm by bringing comprehensive observability to every aspect of your ML systems; easily
 
-- tracks the inputs, outputs and latencies of every step in any inference for debugging and monitoring
-- provides detailed feature lineage showing data provenance and transformation history
-- enables real-time monitoring of feature drift, access patterns, and performance across model deployments
+- trace every model feature back to its original data sources with detailed lineage tracking — showing exactly where data came from
+- troubleshoot and optimize your ML pipelines with end-to-end tracing that tracks the inputs and outputs of every step in any run
+- monitor feature drift, access patterns, and performance metrics in real-time across all your model deployments
 
-Chalk transforms observability from a technical challenge into a strategic advantage, giving you the confidence to deploy and iterate on ML systems with full visibility and control.
+With this level of visibility, you can iterate on models faster and deploy with greater confidence, knowing exactly how your systems behave at each step of the machine learning lifecycle.
 
 ## Chalk for AI Engineers
 
