--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -320,6 +320,7 @@ class AnalyzedReceiptStruct(BaseModel):
 
 @features
 class Transaction:
+    id: int
     merchant_id: Merchant.id
     merchant: Merchant
     receipt: Receipt
@@ -436,21 +437,13 @@ class User:
     llm_response: str = feature(version=3)
 
     # multi-attribute joins
-    txns: DataFrame[Transaction] = has_many(
-        lamda: (User.id == Transaction.user_id) & (User.domain == Transaction.domain)
-    )
+    txns: DataFrame[Transaction]
 
     count_txns: Windowed[int] = windowed(
         "1d", "365d",
-        materialization={
-            # 1-day buckets for the 365d window
-            bucket_duration="1d",
-            bucket_durations={
-                # 10-minute buckets for the 1d window
-                "10m": "1d",
-            }
-        },
-        expression=_.txns.count(),
+        # see our docs on materialized windowed aggregations
+        # https://docs.chalk.ai/docs/materialized_aggregations
+        materialization=True,
     )
 ```
 
