fix: replacing rag

--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -460,5 +460,5 @@ With Chalk, Data Engineers get high-throughput, low-latency pipelines that are h
 ## A full-stack solution for building and deploying enterprise AI
 
 Chalk gives AI, ML, and data teams the building blocks to prototype and deploy production AI and ML systems quickly and reliably.
-Whether you’re building a recommendation system, enterprise RAG, or fighting fraud, Chalk is the platform for low-latency, real-time ML at scale.
+Whether you're delivering hyperpersonalized product recommendations, dynamically reranking search results, or detecting sophisticated fraud patterns, Chalk is the platform for low-latency, real-time ML at scale.
 [Schedule a demo](https://chalk.ai/book-demo) to see how Chalk fits with your team!
