--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -308,7 +308,7 @@ Build enterprise-grade AI applications without stitching together LLMs, prompts,
 - call chat completion APIs out-of-the-box
 - generate embeddings and vectors within pipelines
 - run large-scale evaluations using historical traffic
-- reuse and manage prompts with Named Prompts
+- reuse and manage prompts with [named prompts](/docs/prompts)
 
 ```py
 # Use structured output to easily incorporate unstructured data in our ML pipelines
