link to architecture docs

--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -446,7 +446,7 @@ class User:
     )
 ```
 
-Chalk also integrates natively into your existing data infrastructure by deploying directly into your virtual private cloud (VPC) providing seamless resource access while maintaining strict security and compliance controls with full data isolation:
+Chalk also integrates natively into your existing data infrastructure by [deploying directly into your virtual private cloud](/docs/architecture) (VPC) providing seamless resource access while maintaining strict security and compliance controls with full data isolation:
 
     - customizable compute layer enabling the use of different memory stores (Redis, etc.) tailored to access patterns and performance requirements
     - inherit existing security groups, policies, and ACLs
