fix: hyperlinking online inference

--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -246,7 +246,7 @@ which is served at a unique preview URL.
 chalk apply
 ```
 
-These features are now available for low-latency online inference and [offline training](https://docs.chalk.ai/docs/training-client).
+These features are now available for low-latency [online inference](/docs/query-basics) and [offline training](/docs/training-client).
 The ability to re-use the same features in both contexts dramatically shortens development time and ensures that feature values from online and offline contexts match.
 
 ---
