--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -287,7 +287,8 @@ Unifying online and offline execution enables teams to:
 - reduce time-to-production for new models from months to days
 - build advanced AI systems (RAG, RecSys, fraud, etc.) without building custom infrastructure
 
-You write Python. Chalk handles orchestrating, caching, and serving features at scale, resulting in faster iterations, fewer bugs, and the freedom to focus on building models—not plumbing.
+You write Python.
+ Chalk handles orchestrating, caching, and serving features at scale, resulting in faster iterations, fewer bugs, and the freedom to focus on building models—not plumbing.
 
 ---
 
