--- a/integration-tests.mdx
+++ b/integration-tests.mdx
@@ -94,6 +94,7 @@ class Transaction:
 @features
 class User:
     id: int
+    name: str
     transactions: DataFrame[Transaction]
     transaction_count: Windowed[int] =  windowed(
         "1d", "3d",
@@ -175,6 +176,46 @@ Chalk Feature Value Check Table
 {'user.transaction_count__259200__': 3, 'user.transaction_count__86400__': 1, 'user.transaction_mean__86400__': 10.0, 'user.transaction_mean__259200__': 20.0}
 F
 ```
+
+### Testing for errors
+
+You can also use the check macro to test for errors `ChalkClient`. The `check` method allows assertion on values, errors, and cache hits. Mismatches between expected
+and resolved data will be printed in a table.
+
+```python
+from chalk.client import ChalkClient
+from chalk.features import DataFrame
+from chalk.client import ChalkClient, ErrorCode, ErrorCodeCategory, ChalkError
+from src.feature_sets import Transaction, User
+
+import pytest
+
+
+@pytest.fixture(scope="session")
+def client():
+    return ChalkClient(local=True) # this will deploy your local changes to a branch using the name of your current git branch
+    # return ChalkClient(branch=True) # Uses your current git branch
+
+
+def test_user_null(client):
+    result = client.check(
+        input={
+            User.id: 1,
+            User.name: None,
+        },
+        query_errors=[
+            ChalkError(
+                code=ErrorCode.PARSE_FAILED,
+                category=ErrorCodeCategory.REQUEST,
+                message="Received a null input for feature 'user.name', which is non-nullable (with type 'str').",
+            )
+        ],
+        assertions={
+            User.name: ...
+        },
+    )
+```
+
 
 ---
 
