--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -317,6 +317,8 @@ Easily serve features across your entire tech stack with SDKs in Python, JavaScr
 
 <RequestingFeaturesOnline style={{ height: 328 }} />
 
+With Chalk, MLOps teams easily serve low-latency ML systems and deploy models confidently with comprehensive observability and support for gradual rollouts and seamless rollbacks.
+
 ---
 
 ## Chalk for AI Engineers
@@ -378,7 +380,7 @@ class ProductRec:
     )
 ```
 
-With Chalk, AI engineers get a fully managed feature platform to focus on building and deploying AI-powered applications rather than deploying infrastructure, debugging data pipelines, or managing vector databases.
+With Chalk, AI engineers easily integrate unstructured data, build context-aware prompts, and run LLM evaluations at scale—all without managing vector databases, orchestrating complex data pipelines, or building high-performance infrastructure from scratch.
 
 ---
 
@@ -428,7 +430,7 @@ Chalk evaluates features with point-in-time lookups, guaranteeing evaluation onl
 
 <TemporalCorrectness />
 
-With Chalk, Data scientists easily integrate new data sources, prototype with guaranteed point-in-time correctness, and collaborate with branches and data exports.
+With Chalk, Data scientists easily integrate new data sources, test new features with [point-in-time correctness,](docs/temporal-consistency) and collaborate efficiently through Git-like branches and flexible data exports (to data catalogs, Parquet, Iceberg, etc.).
 
 ---
 
@@ -471,7 +473,7 @@ Chalk also integrates natively into your existing data infrastructure by [deploy
     - inherit existing security groups, policies, and ACLs
     - co-located resources and full-control over data residency to meet compliance requirements
 
-With Chalk, Data Engineers get high-throughput, low-latency pipelines that are highly available without the overhead of configuring YAML, writing custom scripts, or stitching together disparate tools.
+With Chalk, Data Engineers easily orchestrate complex data pipelines, manage features programmatically, and maintain production systems without the overhead of configuring YAML, writing custom scripts, or managing infrastructure.
 
 ---
 
