--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -430,7 +430,7 @@ Chalk evaluates features with point-in-time lookups, guaranteeing evaluation onl
 
 <TemporalCorrectness />
 
-With Chalk, Data scientists easily integrate new data sources, test new features with [point-in-time correctness,](docs/temporal-consistency) and collaborate efficiently through Git-like branches and flexible data exports (to data catalogs, Parquet, Iceberg, etc.).
+With Chalk, data scientists easily integrate new data sources, test new features with [point-in-time correctness,](docs/temporal-consistency) and collaborate efficiently through Git-like branches and flexible data exports (to data catalogs, Parquet, Iceberg, etc.).
 
 ---
 
