--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -299,7 +299,7 @@ Chalk disrupts this paradigm by bringing comprehensive observability to every as
 - troubleshoot and optimize your ML pipelines with end-to-end tracing that tracks the inputs and outputs of every step in any run
 - monitor feature drift, access patterns, and performance metrics in real-time across all your model deployments
 
-Iterate faster and deploy with confidence, knowing exactly how your systems behave at each step of the machine learning lifecycle.
+Iterate faster and deploy with confidence — knowing exactly how your systems behave at each step of the machine learning lifecycle.
 
 ---
 
